--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.NewspaperActivity" />
-        <activity android:name=".activities.RadioActivity"></activity>
+        <activity android:name=".activities.ItemsActivity"></activity>
     </application>
 
 </manifest>
